# citadel

./: .gitignore  BLOG.md  DESIGN.md  Dockerfile  README.md  WHERE_TO_LOOK.md  __init__.py  ablation.py  adversary.py  adversary_llm.py  app.py  baseline.py  client.py  dashboard.py  dynamics.py  environment.py  governance.py  inference.py  investor_agent.py  models.py  openenv.yaml  oversight_env.py  playbook.py  playbook_export.md  pyproject.toml  recorder.py  reward.py  stakeholder_events.py  tasks.py  training_dashboard.py  trust.py
.github/workflows/: smoke.yml
docs/: design.md  plan.md  results.md  training.md
docs/results/: commander_reward_curve.json  oversight_reward_curve.json
examples/: single_episode.py
openenv/core/: env_server.py
runs/: dashboard.html  training_dashboard.html
scripts/: demo_export.py
server/: app.py
training/: README.md  curriculum_eval.ipynb  eval_before_after.py  grpo_train.py  train_commander.ipynb  train_oversight.ipynb  trust_analysis.ipynb
